examples/test/testpolicy1703.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1703
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key19: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value12
      podSelector:
        matchLabels:
          key31: value27
          key8: value45
          key13: value11
